--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "11.1.0"
+  },
   "dependencies": {
     "pubnub": "^4.27.4",
     "pubnub-react": "^1.3.2",
