--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "engines": {
     "npm": "6.4.1",
     "node": "11.1.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "gapi-script": "^1.0.2",
     "pubnub": "^4.27.4",
     "pubnub-react": "^1.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.1.10",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
     "shortid": "^2.2.15",
+    "socket.io": "^2.3.0",
     "sweetalert2": "^8.19.0"
   },
   "scripts": {
@@ -35,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
